--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,53 @@
     font-size: 15px;
     padding: 2px;
 }
+.hustle{
+    display: flex;
+    margin: 40px 0px 30px 0px;
+    height: 80vh;
+    
+}
+.hustle > .leftside{
+    width: 50%;
+    margin-right: 60px;
+}
+.hustle > .rightside{
+    width: 25%;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    margin-top: 150px;
+}
+.hustle > .rightside h1{
+    margin: 10px 0px 10px 0px;
+    font-size: 50px;
+}
+.hustle > .leftside > img{
+    height: 100%;
+    width: 100%;
+
+
+}
+span{
+    border-top: 3px solid rgb(187, 187, 28);
+    
+    
+}
+
+.hustle > .rightside p{
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+.hustle >.rightside >.btnhustle{
+    background-color: black;
+    border-radius: 0px 10px 0px 0px;
+    border: none;
+    padding: 10px;
+    align-content: center;
+    font-size: 20px;
+    
+}
+.hustle >.rightside >.btnhustle a{
+    text-decoration: none;
+    color: yellow;
+}
