--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,34 @@ span{
     text-decoration: none;
     color: yellow;
 }
+
+
+.hustle > .rightside p{
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+.hustle >.rightside >.btnhustle{
+    background-color: black;
+    border-radius: 0px 10px 0px 0px;
+    border: none;
+    padding: 10px;
+    align-content: center;
+    font-size: 20px;
+    
+}
+.hustle >.rightside >.btnhustle a{
+    text-decoration: none;
+    color: yellow;
+}
+/* Section Our Top Movers styling */
+.ourtop{
+    background-color: whitesmoke;
+    background-size: cover;
+    height: 110vh;
+    padding: 100px;
+}
+.ourtop > h1{
+    font-size: 50px; 
+    padding-bottom: 50px; 
+    
+}
