--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,13 +185,10 @@ span2 {
     border-top: 0.01px solid white;
     margin: 40px 120px 0px 120px; 
 }
-.row > a >img{
-    display: inline-block;
-    height: 30px;
-    /* margin-top: 150px;
-    padding-left: 5px; */
-    padding: 5px;
-    margin-top: 60px;
+.footer > .line >.row i {
+    color: white;
+    padding:0.5cm;
+    padding-top:80px;
 
 }
 .lastbit{
